[package]
name = "amadeus-sdk"
version = "0.1.0"
edition = "2021"
authors = ["Amadeus Team"]
description = "Rust SDK for writing Amadeus smart contracts"
license = "MIT"
repository = "https://github.com/amadeusprotocol/node"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
amadeus-sdk-macros = { path = "../sdk-macros" }
dlmalloc = { version = "0.2", features = ["global"], optional = true }

[features]
default = ["use-dlmalloc"]
use-dlmalloc = ["dlmalloc"]
testing = []

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[[example]]
name = "counter"
path = "../examples/counter.rs"

[[example]]
name = "deposit"
path = "../examples/deposit.rs"

[[example]]
name = "coin"
path = "../examples/coin.rs"

[[example]]
name = "nft"
path = "../examples/nft.rs"

[[example]]
name = "showcase"
path = "../examples/showcase.rs"
