[package]
name = "rdb"
version = "0.1.0"
authors = []
edition = "2021"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1

[lib]
name = "rdb"
crate-type = ["cdylib"]

[dependencies]
rustler = { version = "0.36.1", features = ["big_integer"] }
rand = "0.9.1"
sha2 = "0.10.8"
atoi = "2"
bs58 = "0.5.1"
blake3 = "1.8.2"
bls12_381 = { version = "0.8.0", git = "https://github.com/vans163/bls12_381" }
blst = "0.3.16"
thiserror = "2.0.17"
group = "0.13.0"
eetf = "0.11.0"
serde = { version = "1.0", features = ["derive"] }
num-traits = "0.2"

[dependencies.rust-rocksdb]
git = "https://github.com/vans163/rust-rocksdb"
rev = "b3e3f248ecc1b47be3e77aa99e5aa60129e606b8"
default-features = false
features = ["zstd", "zstd-static-linking-only", "multi-threaded-cf"] #"jemalloc", "malloc-usable-size",

[dependencies.rust-librocksdb-sys]
git = "https://github.com/vans163/rust-rocksdb"
rev = "b3e3f248ecc1b47be3e77aa99e5aa60129e606b8"

[patch.crates-io]
rust-rocksdb = { git = "https://github.com/vans163/rust-rocksdb", rev = "b3e3f248ecc1b47be3e77aa99e5aa60129e606b8" }
rust-librocksdb-sys = { git = "https://github.com/vans163/rust-rocksdb", rev = "b3e3f248ecc1b47be3e77aa99e5aa60129e606b8" }
